--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "author": "devJang",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^26.0.13",
+    "@jest/globals": "^29.6.1",
+    "@types/jest": "^29.5.3",
     "@types/node": "^14.6.4",
-    "jest": "^26.4.2",
     "prettier": "^2.1.2",
-    "ts-jest": "^26.3.0",
-    "typescript": "^4.0.2"
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   },
   "repository": "https://github.com/devJang/refactoring-2nd-edition.git"
 }
