--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true
   },
-  "include": ["**/src/**.ts"],
+  "include": ["**/*.ts"],
   "exclude": ["**/**.md", "**/**.json"]
 }
