--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "devDependencies": {
     "@jest/globals": "^29.6.1",
     "@types/jest": "^29.5.3",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^14.6.4",
     "prettier": "^2.1.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
-  "repository": "https://github.com/devJang/refactoring-2nd-edition.git"
+  "repository": "https://github.com/devJang/refactoring-2nd-edition.git",
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
