--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@jest/globals": "^29.6.1",
+    "@total-typescript/ts-reset": "^0.4.2",
     "@types/jest": "^29.5.3",
     "@types/lodash": "^4.14.195",
     "@types/node": "^14.6.4",
